@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
    +getRatingFrequency(String Sku):
}


class ReviewService {
+ ReviewService(ReviewRepository RevRepo)
+ getRatingFrequencyOfProduct(String sku)
}

interface ReviewRepository <<interface>> {
+ getAggregatedRating(String Sku):
+ getReviewsByProduct(String sku):
}


class FrequencyRating{
    -one
    -two
    -three
    -four
    -five
    -globalRating
   Review(one, two, three, four, five, globalRating)
}


ReviewRepository "1" -right-> "0..*" FrequencyRating:  records
ReviewController ..> ReviewService
ReviewService ..> ReviewRepository
@enduml
